# seckit_sa_geolocation

./: .app-vetting.yaml  .cspell.json  .eslintrc.yml  .fossa.yml  .gitignore  .gitmodules  .ort.yml  .pre-commit-config.yaml  .publishrc  .publishrc.json  .python-version  .releaserc  .releaserc.json  .releaserc.yaml  .sconsign.dblite  .semgrepignore  .slimignore  .splunkbase  CHANGELOG.md  Dockerfile  Dockerfile-http_proxy  Dockerfile-saucelabs  Dockerfile-splunk  Dockerfile-splunk-local  Dockerfile-tests  Dockerfile-uf  README-test.md  README.md  SConstruct  additional_packaging.py  build_variables.py  docker-compose copy.yml  docker-compose-ci.yml  docker-compose.yml  globalConfig.json  pyproject.toml  pytest.ini  requirements.txt  requirements_addon_specific.txt  requirements_broken.txt  (+6 more)
.circleci/: config.yml  package_release.sh  publish.sh  testcredentials.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: agreements.yaml  build-test-release.yml  cla.yaml  escu-manual-workflow.yml  exclude-patterns.txt  fossa.yaml  publish-manual.yaml  rebase.yml  release-notes.yaml  release-notes.yml  reuse.yml  review-secrets.yml  snyk.yaml
.reuse/: dep5
LICENSES/: LicenseRef-Splunk-8-2021.txt
package/: README.md  README.txt  SecKit_SA_geolocation.aob_meta  app.manifest
package/README/: addon_builder.conf.spec  inputs.conf.spec  seckit_sa_geolocation_account.conf.spec  seckit_sa_geolocation_settings.conf.spec
package/data/: README
package/default/: app.conf  distsearch.conf  inputs.conf  macros.conf  props.conf  restmap.conf  seckit_sa_geolocation.conf  setup.xml  transforms.conf  web.conf
package/default/data/ui/nav/: default.xml
package/default/data/ui/views/: configuration.xml  health.xml  inputs.xml
package/default/templates/: app.conf.jinja
package/lib/: requirements.txt
package/lib/seckit_helpers/: rest_handler.py
site_scons/site_tools/jinja/: __init__.py
templates/: app.manifest.jinja
test-results/: appinspect.xml
tests/: Dockerfile  __init__.py  backend_entrypoint.sh  conftest.py  docker-compose-ci.yml  docker-compose-script.yml  docker-compose.yml  entrypoint.sh  pytest-ci.ini  pytest.ini  requirements.txt  test_addon.py  test_common.py  test_ui.py
tests/csms/: app_install.py  cloudstack.py  gettoken.py  requirements.txt  setup.sh
tests/knowledge/: __init__.py  conftest.py  pytest-ci.ini  test_addon.py  test_common.py
