# SPDX-FileCopyrightText: 2020 Splunk Inc (Ryan Faircloth) <rfaircloth@splunk.com>
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "seckit_sa_geolocation"
version = "0.1.0"
description = ""
authors = ["Splunk Inc, <sales@splunk.com>"]
license = "Splunk-1-2020"

[tool.poetry.dependencies]
python = "^3.7"
splunktaucclib = "^5"
geoip2 = "^4.2.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
splunk-add-on-ucc-framework = "^5.10.1"
lovely-pytest-docker = "^0.3.1"
pytest-splunk-addon = "^1.11.4"
pytest-expect = "^1.1.0"
pytest-rerunfailures = "^10.1"
splunk-packaging-toolkit = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
